--- a/index.html
+++ b/index.html
@@ -9,7 +9,40 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 </head>
 <body>
-    <h1>HELLO</h1>
-    <h2>h2</h2>
+    <div class="app">
+        <header class="header">
+            <nav class="header__navbar">
+                    <ul class="header__navbar-list">
+                        <li class="header__navbar-item">
+                            Vào cửa hàng trên ứng dụng
+                        </li>
+                        <li class="header__navbar-item">
+                            Kết nối
+                        </li>
+                    </ul>
+
+                    <ul class="header__navbar-list">
+                        <li class="header__navbar-item">
+                            <a href="" class="header__navbar-item-link">Thông báo</a>
+                        </li>
+                        <li class="header__navbar-item">
+                            <a href="" class="header__navbar-item-link">Trợ giúp</a>
+                        </li>
+                        <li class="header__navbar-item">Đăng ký</li>
+                        <li class="header__navbar-item">Đăng nhập</li>
+                    </ul>
+            </nav>
+        </header>
+
+        <div class="container">
+
+        </div>
+
+        <footer class="footer">
+
+        </footer>
+    </div>
+
+
 </body>
 </html>
