--- a/index.html
+++ b/index.html
@@ -44,19 +44,50 @@
                         </ul>
     
                         <ul class="header__navbar-list">
-                            <li class="header__navbar-item">
+                            <li class="header__navbar-item header__navbar-item--has-notify">
                                 <a href="" class="header__navbar-item-link">
                                     <i class="header__navbar-icon fa-regular fa-bell"></i>
                                     Thông báo
                                 </a>
                                 <div class="header__notify">  
                                     <header class="header__notify-header">
-                                        <h3>Thong báo mới nhận</h3>
+                                        <h3>Thông báo mới nhận</h3>
                                     </header>
 
                                     <ul class="header__notify-list">
-                                        <li class="header__notify-item"></li>
+                                        <li class="header__notify-item header__notify-item--view">
+                                            <a href="" class="header__notify-link">
+                                                <img src="./assets/img/imgUsb.webp" alt="" class="header__notify-img">
+                                                <div class="header__notify-info">
+                                                    <span class="header__notify-name">Mỹ phẩm chính hãng</span>
+                                                    <span class="header__notify-desciption">Mô tả mỹ phẩm chính hãng</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li class="header__notify-item header__notify-item--view">
+                                            <a href="" class="header__notify-link">
+                                                <img src="./assets/img/imgUsb.webp" alt="" class="header__notify-img">
+                                                <div class="header__notify-info">
+                                                    <span class="header__notify-name">Mỹ phẩm chính hãng</span>
+                                                    <span class="header__notify-desciption">Mô tả mỹ phẩm chính hãng</span>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li class="header__notify-item header__notify-item--view">
+                                            <a href="" class="header__notify-link">
+                                                <img src="./assets/img/imgUsb.webp" alt="" class="header__notify-img">
+                                                <div class="header__notify-info">
+                                                    <span class="header__notify-name">Mỹ phẩm chính hãng</span>
+                                                    <span class="header__notify-desciption">Mô tả mỹ phẩm chính hãng</span>
+                                                </div>
+                                            </a>
+                                        </li>
                                     </ul>
+                                    <footer class="header__notify-footer">
+                                        <a href="" class="header__notify-footer-btn">
+                                            Xem tất cả
+                                        </a>
+                                    </footer>    
                                 </div>
                             </li>
                             <li class="header__navbar-item">
