--- a/index.html
+++ b/index.html
@@ -112,6 +112,16 @@
         </footer>
     </div>
 
+    <!-- Modal -->
+    <div class="modal">
+        <div class="modal__overlay"></div>
 
+        <div class="modal__body">
+            <div class="modal__inner">
+                <!-- Form login/register -->
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
