--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
 
         <div class="modal__body">
             <div class="modal__inner">
-                <!-- Form login/register -->
+                <!-- Authen form -->
+                <div class="auth-form">
+                    
+                </div>
 
             </div>
         </div>
