--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="modal__overlay"></div>
 
         <div class="modal__body">
-            <div class="modal__inner">
+            <!-- <div class="modal__inner"> -->
                 <!-- Authen form -->
                 <div class="auth-form">
                     <div class="auth-form__header">
@@ -146,12 +146,22 @@
                     </div>
 
                     <div class="auth-form__controls">
-
-
-                        
+                        <button class="btn">TRỞ LẠI</button>
+                        <button class="btn btn--primary">ĐĂNG KÝ</button>
+                    </div>
+                    
+                    <div class="auth-form__socials">
+                        <a href="" class="btn btn--with-icon">
+                            <i class="fab fa-facebook-square"></i>
+                            Kết nối với Facebook
+                        </a>
+                        <a href="" class="btn btn--with-icon">
+                            <i class="fab fa-google"></i>
+                            Kết nối với Google
+                        </a>
                     </div>
                 </div>
-            </div>
+            <!-- </div> -->
         </div>
     </div>
 </body>
