--- a/index.html
+++ b/index.html
@@ -140,24 +140,28 @@
                     <div class="auth-form__aside">
                         <p class="auth-form__policy-text">
                             Bằng việc đăng kí, bạn đã đồng ý với shopee về
-                            <a href="" class="auth-form__policy-link">Điều khoản dịch vụ</a> &
-                            <a href="" class="auth-form__policy-link">Chính sách</a>
+                            <a href="" class="auth-form__text-link">Điều khoản dịch vụ</a> &
+                            <a href="" class="auth-form__text-link">Chính sách bảo mật</a>
                         </p>
                     </div>
 
                     <div class="auth-form__controls">
-                        <button class="btn">TRỞ LẠI</button>
+                        <button class="btn auth-form__controls-back btn--normal">TRỞ LẠI</button>
                         <button class="btn btn--primary">ĐĂNG KÝ</button>
                     </div>
                     
                     <div class="auth-form__socials">
-                        <a href="" class="btn btn--with-icon">
-                            <i class="fab fa-facebook-square"></i>
-                            Kết nối với Facebook
+                        <a href="" class="btn btn--size-s auth-form__socials-facebook btn--with-icon">
+                            <i class="auth-form__socials-icon fab fa-facebook-square"></i>
+                            <span class="auth-form__socials-title">
+                                Kết nối với Facebook
+                            </span>
                         </a>
-                        <a href="" class="btn btn--with-icon">
-                            <i class="fab fa-google"></i>
-                            Kết nối với Google
+                        <a href="" class="btn btn--size-s auth-form__socials-google btn--with-icon">
+                            <i class="auth-form__socials-icon fab fa-google"></i>
+                            <span class="auth-form__socials-title">
+                                Kết nối với Google
+                            </span>
                         </a>
                     </div>
                 </div>
