--- a/index.html
+++ b/index.html
@@ -113,7 +113,25 @@
                     </div>
 
                     <div class="header__search">
+                        <input type="text" class="header__search-input" placeholder="Tìm kiếm sản phẩm">
+                        <div class="header__search-selection">
+                            <span class="header__search-selection-lable">Trong Shop</span>
+                            <i class="header__search-selection-icon fas fa-angle-down"></i>
 
+                            <ul class="header__search-option">
+                                <li class="header__search-option-item">
+                                    <span>Trong Shop</span>
+                                    <i class="fas fa-check"></i>
+                                </li>
+                                <li class="header__search-option-item">
+                                    <span>Ngoài Shop</span>
+                                    <i class="fas fa-check"></i>
+                                </li>
+                            </ul>
+                        </div>
+                        <button class="header__search-btn">
+                            <i class="header__search-btn-icon fas fa-search"></i>
+                        </button>
                     </div>
                     <div class="header__cart">
                         <i class="header__cart-icon fas fa-shopping-cart"></i>
