--- a/index.html
+++ b/index.html
@@ -113,13 +113,26 @@
                     </div>
 
                     <div class="header__search">
-                        <input type="text" class="header__search-input" placeholder="Tìm kiếm sản phẩm">
+                        <div class="header__search-input-wrap">
+                            <input type="text" class="header__search-input" placeholder="Tìm kiếm sản phẩm">
+                            <div class="header__search-history">
+                                <h3 class="header__search-history-heading">Lịch sử tìm kiếm</h3>
+                                <ul class="header__search-history-list">
+                                    <li class="header__search-history-item">
+                                        <a href="" class="">Kem dưỡng da</a>
+                                    </li>
+                                    <li class="header__search-history-item">
+                                        <a href="" class="">Sửa rửa mặt</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                         <div class="header__search-selection">
                             <span class="header__search-selection-lable">Trong Shop</span>
                             <i class="header__search-selection-icon fas fa-angle-down"></i>
 
                             <ul class="header__search-option">
-                                <li class="header__search-option-item">
+                                <li class="header__search-option-item header__search-option-item--active">
                                     <span>Trong Shop</span>
                                     <i class="fas fa-check"></i>
                                 </li>
@@ -133,8 +146,18 @@
                             <i class="header__search-btn-icon fas fa-search"></i>
                         </button>
                     </div>
+                    <!-- Cart layout -->
                     <div class="header__cart">
-                        <i class="header__cart-icon fas fa-shopping-cart"></i>
+                        <div class="header__cart-wrap">
+                            <i class="header__cart-icon fas fa-shopping-cart"></i>
+                            <!-- No cart: header__cart-list--no-cart -->
+                            <div class="header__cart-list ">
+                                <img src="./assets/img/no_cart.jpg" alt="">
+                                <span class="header__cart-list-no-cart-msg">
+                                    Chưa có sản phẩm
+                                </span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
