--- a/index.html
+++ b/index.html
@@ -150,12 +150,22 @@
                     <div class="header__cart">
                         <div class="header__cart-wrap">
                             <i class="header__cart-icon fas fa-shopping-cart"></i>
+                            <span class="header__cart-notice">3</span>
+
                             <!-- No cart: header__cart-list--no-cart -->
                             <div class="header__cart-list ">
-                                <img src="./assets/img/no_cart.jpg" alt="">
-                                <span class="header__cart-list-no-cart-msg">
+                                <img src="./assets/img/no_cart.jpg" alt="" class="header__cart-no-cart-img">
+                                <span class="header__cart-list--no-cart-msg">
                                     Chưa có sản phẩm
                                 </span>
+
+                                <h4 class="header__cart-heading">Sản phẩm đã thêm</h4>
+                                <ul class="header__cart-list-item">
+                                    <li class="header__cart-item">
+                                        
+                                    </li>
+                                </ul>
+
                             </div>
                         </div>
                     </div>
