--- a/index.html
+++ b/index.html
@@ -270,15 +270,17 @@
                                     </div>
                                     <div class="home-product-item__action">
                                         <span class="home-product__heart home-product__heart--liked">
-                                            <i class="far fa-heart"></i>
-                                            <!-- <i class="fas fa-heart"></i> -->
+                                            <i class="home-product__heart-icon-empty far fa-heart"></i>
+                                            <i class="home-product__heart-icon-fill fas fa-heart"></i>
                                         </span>
                                         <div class="home-product-item__rating">
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
+                                            <i class="home-product-item__star-gold fas fa-star"></i>
+                                            <i class="home-product-item__star-gold fas fa-star"></i>
+                                            <i class="home-product-item__star-gold fas fa-star"></i>
+                                            <i class="home-product-item__star-gold fas fa-star"></i>
+                                            <i class=" fas fa-star"></i>
                                         </div>
+                                        <span class="home-product-item__sold">88 đã bán</span>
                                     </div>
                                     <div class="home-product-item__origin">
                                         <span class="home-product-item__brand">Whoo</span>
@@ -286,7 +288,7 @@
                                     </div>
                                     <div class="home-product-item__favourite">
                                         <i class="fas fa-check"></i>
-                                        Yêu thích
+                                        <span>Yêu thích</span>
                                     </div>
                                     <div class="home-product-item__sale-off">
                                         <span class="home-product-item__sale-off-percent">10%</span>
